# apache-airflow-events-trigger

./: .gitignore  SETUP.md  pyproject.toml
dags/: kafka_dag.py  kafka_dag_check_lag.py
plugins/: kafka_utils.py
